# beancount-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: rust.yml
data/: test.beancount
src/: app.rs  beancount.rs  cli.rs  error.rs  main.rs  ui.rs  utils.rs
