[package]
name = "beancount-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beancount-parser = "2.2.1"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
rust_decimal = "1.36.0"
