[package]
name = "beancount-tui"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A terminal user interface (TUI) application for viewing and editing Beancount ledger files."
categories = ["command-line-utilities", "finance"]
repository = "https://github.com/Bergschrat1/beancount-tui"


[dependencies]
beancount-parser = "2.2.1"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
rust_decimal = "1.36.0"
thiserror = "2.0.0"
tui-textarea = "0.7.0"
